--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react": "16.8.16",
     "@types/react-dom": "16.8.4",
     "@types/react-grid-layout": "0.16.7",
+    "@types/react-image-gallery": "0.9.2",
     "@types/react-redux": "7.1.2",
     "@types/react-select": "2.0.15",
     "@types/react-test-renderer": "16.9.0",
@@ -242,7 +243,9 @@
     "react-dom": "16.12.0",
     "react-grid-layout": "0.16.6",
     "react-highlight-words": "0.11.0",
+    "react-image-gallery": "^1.0.3",
     "react-loadable": "5.5.0",
+    "react-modal": "^3.11.1",
     "react-popper": "1.3.3",
     "react-redux": "7.1.1",
     "react-sizeme": "2.5.2",
