--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "@braintree/sanitize-url": "4.0.0",
     "@grafana/slate-react": "0.22.9-grafana",
     "@torkelo/react-select": "2.4.1",
+    "@types/minio": "^7.0.5",
     "@types/react-loadable": "5.5.2",
     "angular": "1.6.9",
     "angular-bindonce": "0.3.1",
@@ -231,6 +232,7 @@
     "lru-cache": "^5.1.1",
     "marked": "0.6.2",
     "memoize-one": "5.1.1",
+    "minio": "^7.0.13",
     "moment": "2.24.0",
     "mousetrap": "1.6.3",
     "mousetrap-global-bind": "1.1.0",
