--- a/packages/grafana-ui/package.json
+++ b/packages/grafana-ui/package.json
@@ -54,7 +54,9 @@
     "react-transition-group": "2.6.1",
     "react-virtualized": "9.21.0",
     "slate": "0.47.8",
-    "tinycolor2": "1.4.1"
+    "tinycolor2": "1.4.1",
+    "react-image-gallery": "1.0.3",
+    "@types/react-image-gallery": "^0.9.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "5.2.4",
@@ -74,6 +76,7 @@
     "@types/pretty-format": "20.0.1",
     "@types/react": "16.8.16",
     "@types/react-custom-scrollbars": "4.0.5",
+    "@types/react-image-gallery": "^0.9.2",
     "@types/react-test-renderer": "16.9.0",
     "@types/react-transition-group": "2.0.16",
     "@types/storybook__addon-info": "4.1.2",
